objects/agf__ADM_Release_Stamp_Batch_ID__c.object
<CustomObject>
    <fields>
        <fullName>agf__Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Copy</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Copy All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release From</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Release Stamp Batch IDs (Release From)</relationshipLabel>
        <relationshipName>Release_Stamp_Batch_IDs_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release To</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Release Stamp Batch IDs (Release To)</relationshipLabel>
        <relationshipName>Release_Stamp_Batch_IDs_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Release Stamp Batch IDs</relationshipLabel>
        <relationshipName>Release_Stamp_Batch_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Release Stamp Batch ID</label>
    <nameField>
        <displayFormat>RSBID-{000000}</displayFormat>
        <label>Release Stamp Batch ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Stamp Batch IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>